--- a/dockernode/docker-compose.yml
+++ b/dockernode/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     # build:
     #    context: .
     #    dockerfile: Dockerfile
-    #   image: kartiksj/nodejs:latest
+    #   image: shreya6363/nodejs:latest
     ports:
       - '3000:3000'
     volumes:
